Documentation edits made through Mintlify web editor

--- a/vi/01-bat-dau/index.mdx
+++ b/vi/01-bat-dau/index.mdx
@@ -1,5 +1,59 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Xin chào!"
+description: "Chào mừng bạn đến với cổng học tập của Luklak"
 ---
 
+<Frame caption="Tự tay kéo thả - tự tạo chức năng vận hành">
+  ![welcome.png](/images/welcome.png)
+</Frame>
+
+Lựa chọn vai trò để bắt đầu với quick demo
+
+<CardGroup cols={4}>
+  <Card title="CEO/Founders..." icon="palette" iconType="duotone" href="https://mintlify.com/docs/settings/global" img="/images/CEO.png">
+    có nhu cầu quản trị vận hành doanh nghiệp
+
+    toàn diện, thông suốt
+  </Card>
+  <Card title="Solution Consultants" icon="code" iconType="duotone" href="https://mintlify.com/docs/api-playground/openapi" img="/images/Solution-engineer.png">
+    phân tích yêu cầu nghiệp vụ và thiết kế giải pháp, hệ thống vận hành
+  </Card>
+  <Card title="Team Managers" icon="screwdriver-wrench" iconType="duotone" href="https://mintlify.com/docs/content/components/accordions" img="/images/Teamlead.png">
+    quản lí hiệu suất, tiến độ, chất lượng làm việc
+
+    cho phòng ban của mình
+  </Card>
+  <Card title="End Users" icon="stars" iconType="duotone" href="https://mintlify.com/customers" img="/images/enduser.png">
+    trực tiếp làm việc, triển khai, tối ưu công việc của mình với hệ thống Luklak
+  </Card>
+</CardGroup>
+
+<Info>
+  Info call-out content
+</Info>
+
+<Check>
+  Check callout content
+</Check>
+
+<Note>
+  Note callout content
+</Note>
+
+<Tip>
+  Tip callout content
+</Tip>
+
+<Warning>
+  Warning callout content
+</Warning>
+
+<Danger>
+  Danger callout content
+</Danger>
+
+> This is a block quote hehe
+
+- Unordered list
+
+/
