--- a/vi/02-platform/index.mdx
+++ b/vi/02-platform/index.mdx
@@ -1,5 +1,119 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Toàn cảnh kiến trúc hệ thống LUKLAK"
+description: "Tìm hiểu tổng quan bố cục & khả năng của hệ thống trong 5 phút"
+sidebarTitle: "Luklak Platform"
 ---
 
+> LUKLAK được xây dựng với kiến trúc platform với những miếng lego lõi đủ phổ quát để doanh nghiệp tự tay kéo thả tạo nên các chức năng, ứng dụng quản trị vận hành theo nhu cầu đặc thù mà không-cần-code
+
+<Frame caption="Kiến trúc hệ thống LUKLAK, từ nguyên liệu, thiết kế đến sử dụng">
+  ![kien-truc-he-thong-luklak](/images/platform-structure.png)
+</Frame>
+
+## Tầng 1: Các miếng lego lõi
+
+### Đối tượng nghiệp vụ phổ quát (Universal Object)
+
+<Tip>
+  <Icon icon="cube" iconType="duotone" color="#358AFF" /> **Universal Object** là miếng lego trung tâm, là trái tim giúp chuẩn hóa 100% dữ liệu của doanh nghiệp. Tất cả chung một bể dữ liệu, cùng ngôn ngữ, có thể khai thác sử dụng lâu dài cho nhiều mục đích.
+</Tip>
+
+<iframe src="https://www.guidejar.com/embed/3tfJg2mj2HIHiEmYA5A8?type=1&controls=on" width="100%" height="500px" allowfullscreen="true" frameborder="0" />
+
+<Note>
+  Mỗi Object luôn đi kèm 2 nửa hữu cơ
+
+  <CardGroup cols={2}>
+    <Card title="Màn hình dữ liệu (Data Screen)" icon="pen-field" iconType="duotone" color="#358AFF">
+      - **Trường dữ liệu & Màn hình:** các Trường dữ liệu do người dùng tự tạo ra để đáp ứng nhu cầu lưu trữ thông tin của Loại việc đó. Các Trường dữ liệu được được sắp xếp hiển thị trong một Màn hình để gán cho một Loại việc.
+    </Card>
+    <Card title="Tiến trình (Workflow)" icon="arrow-progress" iconType="duotone" color="#358AFF">
+      - **Luồng tiến trình:** bao gồm các Trạng thái và Bước chuyển giữa các trạng thái đó, thể hiện trực quan luồng quy trình của Loại việc đó diễn ra như nào.
+    </Card>
+  </CardGroup>
+</Note>
+
+### Màn hình dữ liệu (Data Screen)
+
+### Tiến trình (Workflow)
+
+### Kết nối Đối tượng nghiệp vụ (Object Connection)
+
+### Tự động hóa phổ quát (Universal Automation)
+
+### Giao diện làm việc (Workviews)
+
+### Phương án phân quyền (Permission Scheme)
+
+### Phương án thông báo (Notification Scheme)
+
+### Người dùng, nhóm, vai trò (User, Group, Role)
+
+### Đặc quyền doanh nghiệp (Business Privilege)
+
+### Giấy phép truy cập tiện ích (Item Access)
+
+## Tầng 2: Thiết kế chức năng
+
+### Function - Đóng gói logic
+
+### Function Access - Quyền đối với Chức năng
+
+## Tầng 3: Sử dụng làm việc & giao tiếp
+
+### Unified Org - Tổ chức chung
+
+### Workspace - Các văn phòng cơ động
+
+### Personal Home - Trang cá nhân
+
+---
+
+## keywords: ['mục việc', 'không bó cứng']
+
+### ## **Vietnamese Version (For Vietnamese Audience)**
+
+#### **Tiêu đề: Kiến Trúc Luklak: Tự Tay Kiến Tạo Hệ Thống Vận Hành cho Doanh nghiệp**
+
+**Tại sao điều này quan trọng:** Bạn có nhận thấy rằng các phần mềm hiện tại đang kìm hãm sự phát triển của doanh nghiệp? Hầu hết là các công cụ đóng gói sẵn, cứng nhắc, buộc bạn phải vận hành theo một khuôn mẫu. Khi thị trường thay đổi, chiến lược thay đổi, hệ thống của bạn lại không thể thích ứng.
+
+Kiến trúc 3 Tầng của Luklak được sinh ra để giải quyết "niềm đau" này. Đây không chỉ là một tính năng, mà là một cuộc cách mạng trong tư duy xây dựng hệ thống, giúp bạn tự tay kiến tạo một bộ máy vận hành linh hoạt, sẵn sàng cho mọi bước tiến của doanh nghiệp.
+
+---
+
+### ### Chào Mừng Kỷ Nguyên Mới Của Phần Mềm Doanh Nghiệp
+
+Thế hệ phần mềm cũ giống như những chiếc điện thoại "cục gạch" (feature phone)—mỗi chức năng là một ứng dụng riêng lẻ, rời rạc, khiến dữ liệu phân mảnh và luồng công việc bị đứt gãy.
+
+Luklak là thế hệ ứng dụng hoàn toàn mới, giống như một chiếc "smartphone". Mọi chức năng đa dạng và đặc thù đều được hợp nhất trên một nền tảng, vận hành thông suốt. Nền tảng của sức mạnh này chính là Kiến trúc 3 Tầng.
+
+[DIAGRAM: Hình ảnh trực quan thể hiện sự chuyển đổi từ các khối ứng dụng rời rạc (feature phone) sang một nền tảng hợp nhất (smartphone).]
+
+#### **Tầng 1: Các Khối LEGO® Nền Tảng (Công Nghệ Lõi)**
+
+Đây là nền tảng sức mạnh của Luklak, bao gồm các "miếng lego nocode & lowcode" cốt lõi. Quan trọng nhất là `🧊 Đối tượng Phổ quát`. Mọi thứ trong doanh nghiệp bạn, từ khách hàng, dự án, đến máy móc, thiết bị, đều được tạo ra từ cùng một loại "gạch" thông minh này. Điều này đảm bảo một sự thật: mọi thứ đều có thể kết nối với nhau một cách tự nhiên.
+
+#### \*\*Tầng 2: Bản Thiết Kế ( \*\*`📋 Chức năng`**của Bạn)**
+
+Đây là nơi bạn thực sự **làm chủ hệ thống**. Một `📋 Chức năng` là bản thiết kế tổng thể cho một nghiệp vụ—ví dụ như "Quản lý Quan hệ Khách hàng" hay "Quy trình Tuyển dụng." Bạn sẽ quyết định quy trình vận hành, dữ liệu cần thu thập, và các bước tự động hóa. Bạn là kiến trúc sư cho chính bộ máy của mình.
+
+#### \*\*Tầng 3: Tòa Nhà Vận Hành ( \*\*`⏹️ Mảng việc`**Hoạt động)**
+
+Một `⏹️ Mảng việc` là một quy trình đã được triển khai và đi vào hoạt động thực tế, nơi đội ngũ của bạn làm việc mỗi ngày. Khi bạn tạo một `⏹️ Mảng việc` từ bản thiết kế `📋 Chức năng`, nó ngay lập tức vận hành chính xác theo logic bạn đã định sẵn.
+
+---
+
+### ### Lợi Thế Chiến Lược Dành Cho Lãnh Đạo
+
+Kiến trúc này không chỉ là về công nghệ, nó mang lại lợi thế cạnh tranh trực tiếp:
+
+- **Linh hoạt và Tự chủ:** Cần thay đổi quy trình? Bạn chỉ cần chỉnh sửa "bản thiết kế" `📋 Chức năng`. Mọi hoạt động thực tế tại các `⏹️ Mảng việc` đều có thể được cập nhật. Doanh nghiệp của bạn có thể thích ứng với mọi biến động của thị trường mà không cần phụ thuộc vào đội ngũ kỹ thuật bên ngoài.
+- **Nhất quán cho Dòng chảy thông suốt:** Vì tất cả các bộ phận đều được xây dựng từ cùng một loại vật liệu lõi, dữ liệu luân chuyển một cách mạch lạc, không còn tình trạng "ốc đảo" thông tin. Điều này tạo ra một **dòng chảy công việc thông suốt**, nâng cao hiệu quả phối hợp.
+- **Khả năng Mở rộng Quy mô:** Bạn có thể nhân bản các mô hình vận hành thành công ra toàn doanh nghiệp chỉ trong vài cú nhấp chuột. Mở một chi nhánh mới? Tạo một `⏹️ Mảng việc` mới từ `📋 Chức năng` đã được chuẩn hóa. Đây là công thức cho sự tăng trưởng thần tốc và bền vững.
+
+---
+
+### ## **Bước Tiếp Theo là gì?**
+
+- Xem cách kiến trúc hợp nhất này cho phép bạn theo dõi toàn bộ doanh nghiệp: [**Xây dựng Báo cáo Điều hành của bạn**](https://www.google.com/search?q=./reports-and-dashboards.mdx)
+- Khám phá câu chuyện từ các doanh nghiệp tiên phong đã áp dụng kiến trúc này: [**Cảm nhận của những doanh nghiệp tiên phong**](https://www.google.com/search?q=https://luklak.com/vi/home/%23elementor-toc__heading-anchor-10)
