--- a/vi/06-khoa-hoc/index.mdx
+++ b/vi/06-khoa-hoc/index.mdx
@@ -1,5 +1,51 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Test khóa học"
+description: "Description of your new file."
 ---
 
+nnn
+
+![image.png](/images/danglam-doiti.png)
+
+<Frame caption="Tự động hóa phổ quát (Universal Object)">
+  <iframe width="702" height="400" src="https://www.youtube.com/embed/videoseries?si=St-pdaMxlRxXbkII&list=PL9XzV0xpQue53hlkkxDAvtoJYBUQZalOG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="true" />
+</Frame>
+
+test
+
+<AccordionGroup>
+  <Accordion title="Logic hệ thống" icon="cubes" iconType="duotone">
+    ![cover-he-thong-luklak.png](/images/cover-he-thong-luklak.png)
+  </Accordion>
+  <Accordion title="Bài toán của sếp" icon="puzzle" iconType="duotone">
+    ![GJ Thumbnail 2.png](/images/GJThumbnail2.png)
+  </Accordion>
+  <Accordion title="Thiết kế giải pháp" icon="map" iconType="duotone">
+    ![GJ Thumbnail 3.png](/images/GJThumbnail3.png)
+  </Accordion>
+  <Accordion title="Vận hành thực tế" icon="people-roof" iconType="duotone">
+    ![GJ Thumbnail 4.png](/images/GJThumbnail4.png)
+  </Accordion>
+  <Accordion title="Nâng tầm quản lí" icon="chart-mixed-up-circle-dollar" iconType="duotone">
+    ![GJ Thumbnail 5 (1).png](/images/GJThumbnail5\(1\).png)
+  </Accordion>
+</AccordionGroup>
+
+
+<CardGroup cols={2}>
+  <Card title="Logic hệ thống" icon="sparkles" img="/images/cover-he-thong-luklak.png">
+    
+  </Card>
+  <Card title="Bài toán của sếp" icon="sparkles" img="/images/GJThumbnail2.png">
+    
+  </Card>
+  <Card title="Thiết kế giải pháp" icon="sparkles" img="/images/GJThumbnail3.png">
+    
+  </Card>
+  <Card title="Vận hành thực tế" icon="sparkles" img="/images/GJThumbnail4.png">
+    
+  </Card>
+  <Card title="Nâng tầm quản lý" icon="sparkles" img="/images/GJThumbnail5(1).png" cta="Bắt đầu học">
+    
+  </Card>
+</CardGroup>
