Documentation edits made through Mintlify web editor

--- a/vi/06-khoa-hoc/index.mdx
+++ b/vi/06-khoa-hoc/index.mdx
@@ -27,10 +27,9 @@ test
     ![GJ Thumbnail 4.png](/images/GJThumbnail4.png)
   </Accordion>
   <Accordion title="Nâng tầm quản lí" icon="chart-mixed-up-circle-dollar" iconType="duotone">
-    ![GJ Thumbnail 5 (1).png](/images/GJThumbnail5\(1\).png)
+    ![GJ Thumbnail 5 (1).png](/images/nang-tam-quan-ly.png)
   </Accordion>
 </AccordionGroup>
-
 
 <CardGroup cols={2}>
   <Card title="Logic hệ thống" icon="sparkles" img="/images/cover-he-thong-luklak.png">
@@ -45,7 +44,7 @@ test
   <Card title="Vận hành thực tế" icon="sparkles" img="/images/GJThumbnail4.png">
     
   </Card>
-  <Card title="Nâng tầm quản lý" icon="sparkles" img="/images/GJThumbnail5(1).png" cta="Bắt đầu học">
+  <Card title="Nâng tầm quản lý" icon="sparkles" img="/images/nang-tam-quan-ly.png" cta="Bắt đầu học">
     
   </Card>
 </CardGroup>
