Documentation edits made through Mintlify web editor

--- a/vi/01-bat-dau/tcs.mdx
+++ b/vi/01-bat-dau/tcs.mdx
@@ -8,7 +8,9 @@ sidebarTitle: "Total Customer Solution"
 
 **Tầm quan trọng của hệ thống làm khách toàn diện**
 
-Các hệ thống CRM truyền thống tạo ra các "silo" dữ liệu, khiến phòng marketing, sales và vận hành hoạt động rời rạc. Điều này dẫn đến trải nghiệm khách hàng đứt gãy và ban lãnh đạo không có được cái nhìn toàn cảnh về hiệu quả kinh doanh. Luklak phá vỡ hoàn toàn các rào cản này, hợp nhất toàn bộ hành trình của khách hàng thành một **dòng chảy thông suốt**, biến dữ liệu thành tài sản chiến lược và tối ưu hóa doanh thu trên từng điểm chạm.
+<Info>
+  Các hệ thống CRM truyền thống tạo ra các "silo" dữ liệu, khiến phòng marketing, sales và vận hành hoạt động rời rạc. Điều này dẫn đến trải nghiệm khách hàng đứt gãy và ban lãnh đạo không có được cái nhìn toàn cảnh về hiệu quả kinh doanh. Luklak phá vỡ hoàn toàn các rào cản này, hợp nhất toàn bộ hành trình của khách hàng thành một **dòng chảy thông suốt**, biến dữ liệu thành tài sản chiến lược và tối ưu hóa doanh thu trên từng điểm chạm.
+</Info>
 
 <Note>
   [**Tải về file PDF/slide giải pháp Lukkal Total Customer Solution**](https://drive.google.com/file/d/1LQy43V0F4RcoluLz9UNztoLn8-fuyFvI/view)
