--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,30 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Xin chào!"
+description: "Chào mừng bạn đến với cổng học tập của Luklak"
 ---
 
-## Setting up
+<Frame caption="Tự tay kéo thả - tự tạo chức năng vận hành">
+  ![welcome.png](/images/welcome.png)
+</Frame>
 
-Get your documentation site up and running in minutes.
+Lựa chọn vai trò để bắt đầu với quick demo
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+<CardGroup cols={4}>
+  <Card title="CEO/Founders..." icon="palette" iconType="duotone" href="https://mintlify.com/docs/settings/global" img="/images/CEO.png">
+    có nhu cầu quản trị vận hành doanh nghiệp
 
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
-
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
+    toàn diện, thông suốt
   </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
+  <Card title="Solution Consultants" icon="code" iconType="duotone" href="https://mintlify.com/docs/api-playground/openapi" img="/images/Solution-engineer.png">
+    phân tích yêu cầu nghiệp vụ và thiết kế giải pháp, hệ thống vận hành
   </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
+  <Card title="Team Managers" icon="screwdriver-wrench" iconType="duotone" href="https://mintlify.com/docs/content/components/accordions" img="/images/Teamlead.png">
+    quản lí hiệu suất, tiến độ, chất lượng làm việc
 
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
+    cho phòng ban của mình
   </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
+  <Card title="End Users" icon="stars" iconType="duotone" href="https://mintlify.com/customers" img="/images/enduser.png">
+    trực tiếp làm việc, triển khai, tối ưu công việc của mình với hệ thống Luklak
   </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
+</CardGroup>
 
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
