Documentation edits made through Mintlify web editor

--- a/vi/01-bat-dau/7-buoc.mdx
+++ b/vi/01-bat-dau/7-buoc.mdx
@@ -251,7 +251,7 @@ Giả sử bạn muốn tạo `📋 Chức năng` CRM để quản lý sâu sát
 ## What's Next?
 
 <Tip>
-  Chúc mừng bạn đã hoàn thành hướng dẫn\! Giờ bạn đã có một cái nhìn tổng quan về cách kiến tạo một `<Tooltip tip="Là một bản thiết kế logic, chứa đựng toàn bộ quy trình, dữ liệu, và tự động hóa cho một nghiệp vụ cụ thể.">📋 Chức năng</Tooltip>` trên Luklak.
+  Chúc mừng bạn đã hoàn thành hướng dẫn\! Giờ bạn đã có một cái nhìn tổng quan về cách kiến tạo một `📋 Chức năng` trên <Tooltip tip="">Luklak.</Tooltip>
 </Tip>
 
 - [**`Khám phá các Mẫu 📋 Chức năng có sẵn:`**](/templates/function-templates) Sử dụng các mẫu được thiết kế sẵn để tăng tốc quá trình triển khai của bạn.
