Documentation edits made through Mintlify web editor

--- a/vi/01-bat-dau/7-buoc.mdx
+++ b/vi/01-bat-dau/7-buoc.mdx
@@ -9,7 +9,7 @@ import { Card, Columns, Note, Frame, Tip, Tab, Tabs, Tooltip } from 'mintlify/co
 <Tip>
   **`📋 Chức năng là gì?`** Là đơn vị tổ chức của Luklak nocode, có thể hiểu là tấm bản đồ thiết kế logic vận hành của một mảng công việc lớn.
 
-  Sau đó, một `<Tooltip tip="Là một không gian làm việc 'sống', nơi người dùng cuối thực hiện các công việc hàng ngày. Mỗi ⏹️ Mảng việc sẽ vận hành theo logic của một 📋 Chức năng được gán vào.">⏹️ Mảng việc</Tooltip>` được gắn với `📋 Chức năng` nào thì sẽ vận hành đúng theo chỉ dẫn của `📋 Chức năng` đó.
+  Sau đó, một <Tooltip tip="Là một không gian làm việc 'sống', nơi người dùng cuối thực hiện các công việc hàng ngày. Mỗi ⏹️ Mảng việc sẽ vận hành theo logic của một 📋 Chức năng được gán vào.">⏹️ Mảng việc</Tooltip> được gắn với `📋 Chức năng` nào thì sẽ vận hành đúng theo chỉ dẫn của `📋 Chức năng` đó.
 </Tip>
 
 Giả sử bạn muốn tạo `📋 Chức năng` CRM để quản lý sâu sát mọi `Đầu việc` từ khách hàng đến hợp đồng, từ tư vấn đến chốt thành công. Chỉ với 7 bước đơn giản là làm được.
@@ -31,7 +31,7 @@ Giả sử bạn muốn tạo `📋 Chức năng` CRM để quản lý sâu sát
     <Note>
       **`Đối tượng Phổ quát (Universal Object) - Miếng lego lõi quan trọng nhất:`**
 
-      Đứng đằng sau mọi `Loại việc` người dùng tạo ra đều là `<Tooltip tip="Đơn vị lõi phổ quát và linh hoạt nhất của Luklak, có thể đại diện cho bất cứ thứ gì bạn muốn quản lý: một khách hàng, một dự án, một nhân sự, một tài sản...">Đối tượng Phổ quát</Tooltip>` - đơn vị lõi phổ quát & linh hoạt. Nó có thể đại diện cho bất cứ `Loại việc` nào:
+      Đứng đằng sau mọi `Loại việc` người dùng tạo ra đều là <Tooltip tip="Đơn vị lõi phổ quát và linh hoạt nhất của Luklak, có thể đại diện cho bất cứ thứ gì bạn muốn quản lý: một khách hàng, một dự án, một nhân sự, một tài sản...">Đối tượng Phổ quát</Tooltip> - đơn vị lõi phổ quát & linh hoạt. Nó có thể đại diện cho bất cứ `Loại việc` nào:
 
       - `🧊Customer` trong CRM
       - `🧊Employee` trong HRM
