--- a/vi/03-thiet-ke/laika-global.mdx
+++ b/vi/03-thiet-ke/laika-global.mdx
@@ -237,3 +237,29 @@ Tự động gửi thông báo dựa trên các bộ lọc đã lưu để đả
 | **CF-12**| Hoàn thành Dự án, Tính Voucher | Trạng thái của `Project Management/🧊Dự án` thay đổi sẽ tự động tìm đến `CRM/🧊Khách hàng` liên quan và cập nhật giá trị voucher. |
 
 ---
+
+
+### **PHẦN 6: MÔ HÌNH PHÂN QUYỀN**
+
+#### **6.1. Lớp 1: Đặc quyền Doanh nghiệp (Business Privilege)**
+
+  * **Mô tả:** Đây là lớp quyền cao nhất, hoạt động như "thẻ ra vào" toàn bộ hệ thống, xác định quyền hạn tối đa của một người dùng.
+
+| Cấp độ Đặc quyền | Đối tượng tại LAIKA | Mô tả Quyền hạn |
+| :--- | :--- | :--- |
+| **Owner** | CEO | Cấp độ cao nhất. Quản lý thanh toán, có thể chuyển giao quyền sở hữu, và giữ tất cả các đặc quyền của Admin. |
+| **Admin** | COO, Quản trị viên hệ thống | Có thể cấu hình mọi thứ trong hệ thống, từ Cài đặt Toàn cục đến quản lý người dùng. |
+| **App Manager** | Trưởng các Khu vực (VD: Head of Sales, Head of Design...) | Một vai trò chuyên biệt có thể thiết kế, chỉnh sửa và quản lý các Chức năng (Functions) 📋. |
+| **Member** | Tất cả nhân viên còn lại | Đặc quyền tiêu chuẩn cho hầu hết người dùng, cho phép họ làm việc trong các Mảng việc (Spaces) ⏹️ mà họ được cấp quyền truy cập. |
+
+#### **6.2. Lớp 2: Nguyên tắc Phân quyền Truy cập Tiện ích (Principles for Item Access)**
+
+  * **Mô tả:** Các nguyên tắc này đóng vai trò là kim chỉ nam để Quản trị viên gán quyền truy cập vào các "vùng chứa" công việc và tài sản chung.
+
+| Loại Tiện ích (Item) | Nguyên tắc Phân quyền (Permission Principle) | Lý do & Lợi ích |
+| :--- | :--- | :--- |
+| **📂 Khu vực (Areas)** | - **Admin:** CEO, COO\<br\>- **Manager:** Trưởng Khu vực tương ứng\<br\>- **Member:** Nhóm phòng ban tương ứng | Tạo môi trường làm việc tập trung cho từng phòng ban, giảm thiểu sự lộn xộn và tăng hiệu quả điều hướng. |
+| **👥 Nhóm (Groups)** | - **Manager:** Trưởng phòng ban của Nhóm đó\<br\>- **Member:** Tất cả thành viên trong Nhóm | Trao quyền cho trưởng phòng tự quản lý thành viên trong team của mình, tăng tính chủ động và giảm tải cho Admin hệ thống. |
+| **Báo cáo & Bộ lọc** | - **Admin:** Người tạo ra báo cáo/bộ lọc, CEO, COO\<br\>- **Manager:** Các Trưởng Khu vực có liên quan\<br\>- **Member:** Các Nhóm hoặc cá nhân được chia sẻ | Đảm bảo dữ liệu tổng hợp và các chỉ số kinh doanh nhạy cảm chỉ được chia sẻ với đúng đối tượng. |
+| **📋 Chức năng (Functions)** | - **Admin:** Quản trị viên hệ thống, CEO, COO\<br\>- **Manager:** Người có Đặc quyền `App Manager`\<br\>- **Member:** Hầu hết nhân viên | Quản trị chặt chẽ các quy trình nghiệp vụ cốt lõi, trong khi vẫn cho phép các Trưởng bộ phận linh hoạt tinh chỉnh và nhân viên áp dụng vào công việc. |
+| **⏹️ Mảng việc (Spaces)** | - **Admin:** Trưởng dự án hoặc Trưởng nhóm phụ trách\<br\>- **Member:** Tất cả thành viên được mời vào Mảng việc | Đảm bảo người chịu trách nhiệm chính có toàn quyền quản lý không gian làm việc của dự án hoặc của nhóm mình. |
