Documentation edits made through Mintlify web editor

--- a/vi/03-thiet-ke/laika-global2.mdx
+++ b/vi/03-thiet-ke/laika-global2.mdx
@@ -117,6 +117,8 @@ description: "Description of your new file."
 
 ## **MÔ HÌNH QUAN HỆ ĐỐI TƯỢNG**
 
+![laika-er-toàn cục.png](/images/laika-er-toàncục.png)
+
 <Tabs>
   <Tab title="Quan hệ Cha-con">
     <Info>
