Documentation edits made through Mintlify web editor

--- a/vi/03-thiet-ke/laika-mkt.mdx
+++ b/vi/03-thiet-ke/laika-mkt.mdx
@@ -31,7 +31,7 @@ title: "Chức năng Chiến dịch Marketing"
   <Tab title="Luồng công việc">
     **Luồng công việc của Chiến dịch**
 
-    ![Mermaid Diagram 2025 08 18 115911 Pn](https://mintlify.s3.us-west-1.amazonaws.com/luklak-28b92ec5/images/mermaid-diagram-2025-08-18-115911.png)
+    ![Laika Mkt Campaign Pn](/images/laika-flagship/mkt-campaign/laika-mkt-campaign.png)
 
     ```
     CHUẨN BỊ → ĐANG CHẠY ↔ TẠM DỪNG → HOÀN THÀNH
@@ -70,7 +70,7 @@ title: "Chức năng Chiến dịch Marketing"
   <Tab title="Luồng công việc">
     **Luồng công việc của Quảng cáo**
 
-    ![Mermaid Diagram 2025 08 18 120028 Pn](https://mintlify.s3.us-west-1.amazonaws.com/luklak-28b92ec5/images/mermaid-diagram-2025-08-18-120028.png)
+    ![Laika Ad Pn](/images/laika-flagship/mkt-campaign/laika-ad.png)
 
     ```
     BẢN NHÁP → CHỜ DUYỆT → ĐÃ DUYỆT → HOẠT ĐỘNG ↔ TẠM DỪNG ┐
